--- a/nihal/index.html
+++ b/nihal/index.html
@@ -29,31 +29,17 @@
 <!-- Begin page content -->
 <main class="flex-shrink-0">
   <div class="container">
-    <h1 class="mt-5">Sofi</h1>
+    <h1 class="mt-5">Nihal</h1>
     <div class="row">
 	  <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
 	    <img
-	      src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
+	      src="1.jpeg"
 	      class="w-100 shadow-1-strong rounded mb-4"
 	      alt=""
 	    />
 
 	    <img
-	      src="https://mdbootstrap.com/img/Photos/Vertical/mountain1.jpg"
-	      class="w-100 shadow-1-strong rounded mb-4"
-	      alt=""
-	    />
-	  </div>
-
-	  <div class="col-lg-4 mb-4 mb-lg-0">
-	    <img
-	      src="https://mdbootstrap.com/img/Photos/Vertical/mountain2.jpg"
-	      class="w-100 shadow-1-strong rounded mb-4"
-	      alt=""
-	    />
-
-	    <img
-	      src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
+	      src="2.jpeg"
 	      class="w-100 shadow-1-strong rounded mb-4"
 	      alt=""
 	    />
@@ -61,13 +47,27 @@
 
 	  <div class="col-lg-4 mb-4 mb-lg-0">
 	    <img
-	      src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg"
+	      src="3.jpeg"
 	      class="w-100 shadow-1-strong rounded mb-4"
 	      alt=""
 	    />
 
 	    <img
-	      src="https://mdbootstrap.com/img/Photos/Vertical/mountain3.jpg"
+	      src="4.jpeg"
+	      class="w-100 shadow-1-strong rounded mb-4"
+	      alt=""
+	    />
+	  </div>
+
+	  <div class="col-lg-4 mb-4 mb-lg-0">
+	    <img
+	      src="5.jpeg"
+	      class="w-100 shadow-1-strong rounded mb-4"
+	      alt=""
+	    />
+
+	    <img
+	      src="6.jpeg"
 	      class="w-100 shadow-1-strong rounded mb-4"
 	      alt=""
 	    />
@@ -80,4 +80,3 @@
       
   </body>
 </html>
-
