--- a/ishanu/index.html
+++ b/ishanu/index.html
@@ -29,49 +29,22 @@
 <!-- Begin page content -->
 <main class="flex-shrink-0">
   <div class="container">
-    <h1 class="mt-5">Sofi</h1>
+    <h1 class="mt-5">Nihal</h1>
     <div class="row">
 	  <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
 	    <img
-	      src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
+	      src="1.jpeg"
 	      class="w-100 shadow-1-strong rounded mb-4"
 	      alt=""
 	    />
 
 	    <img
-	      src="https://mdbootstrap.com/img/Photos/Vertical/mountain1.jpg"
+	      src="2.jpeg"
 	      class="w-100 shadow-1-strong rounded mb-4"
 	      alt=""
 	    />
 	  </div>
 
-	  <div class="col-lg-4 mb-4 mb-lg-0">
-	    <img
-	      src="https://mdbootstrap.com/img/Photos/Vertical/mountain2.jpg"
-	      class="w-100 shadow-1-strong rounded mb-4"
-	      alt=""
-	    />
-
-	    <img
-	      src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
-	      class="w-100 shadow-1-strong rounded mb-4"
-	      alt=""
-	    />
-	  </div>
-
-	  <div class="col-lg-4 mb-4 mb-lg-0">
-	    <img
-	      src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg"
-	      class="w-100 shadow-1-strong rounded mb-4"
-	      alt=""
-	    />
-
-	    <img
-	      src="https://mdbootstrap.com/img/Photos/Vertical/mountain3.jpg"
-	      class="w-100 shadow-1-strong rounded mb-4"
-	      alt=""
-	    />
-	  </div>
 	</div>
   </div>
 </main>
