--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ treeJson = d3.json("data.json", function(error, treeData) {
     callbacks: {
       nodeClick: function(name, extra) {
         const url = name.replace(' ', '_').toLowerCase();
-        window.location = `/${url}`;
+        window.location = url;
       },
       nodeRightClick: function(name, extra) {
         alert('Right-click: ' + name);
