--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ treeJson = d3.json("data.json", function(error, treeData) {
     debug: true,
     // hideMarriageNodes: true,
     // marriageNodeSize: 5,
-    height: 800,
-    width: 1200,
+    // height: 800,
+    // width: 1200,
     callbacks: {
       nodeClick: function(name, extra) {
         const url = name.replace(' ', '_').toLowerCase();
