--- a/nihal/index.html
+++ b/nihal/index.html
@@ -21,7 +21,7 @@
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Family Tree</a>
+      <a class="navbar-brand" href="/photo/">Family Tree</a>
     </div>
   </nav>
 </header>
