--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 <body>
 <!-- <h1> - <a href="https://github.com/ErikGartner/dTree">Demo</a></h1> -->
 <div id="graph"></div>
-
 <script>
 treeJson = d3.json("data.json", function(error, treeData) {
   dTree.init(treeData, {
@@ -60,8 +59,8 @@ treeJson = d3.json("data.json", function(error, treeData) {
     debug: true,
     // hideMarriageNodes: true,
     // marriageNodeSize: 5,
-    // height: 800,
-    // width: 1200,
+    height: 2000,
+    width: 1200,
     callbacks: {
       nodeClick: function(name, extra) {
         const url = name.replace(' ', '_').toLowerCase();
