--- a/nusra/index.html
+++ b/nusra/index.html
@@ -33,13 +33,13 @@
     <div class="row">
 	  <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
 	    <img
-	      src="1.jpeg"
+	      src="1.jpg"
 	      class="w-100 shadow-1-strong rounded mb-4"
 	      alt=""
 	    />
 
 	    <img
-	      src="2.jpeg"
+	      src="2.jpg"
 	      class="w-100 shadow-1-strong rounded mb-4"
 	      alt=""
 	    />
