added sheza and muhammed_ali

--- a/muhammed_ali/index.html
+++ b/muhammed_ali/index.html
@@ -21,7 +21,7 @@
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/photo/">Back to Family Tree</a>
+      <a class="navbar-brand" href="/photo/">Family Tree</a>
     </div>
   </nav>
 </header>
@@ -29,23 +29,8 @@
 <!-- Begin page content -->
 <main class="flex-shrink-0">
   <div class="container">
-    <h1 class="mt-5">Nusra</h1>
-    <div class="row">
-	  <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-	    <img
-	      src="1.jpg"
-	      class="w-100 shadow-1-strong rounded mb-4"
-	      alt=""
-	    />
-
-	    <img
-	      src="2.jpg"
-	      class="w-100 shadow-1-strong rounded mb-4"
-	      alt=""
-	    />
-	  </div>
-
-	</div>
+    <h1 class="mt-5">Muhammed Ali</h1>
+    
   </div>
 </main>
 
@@ -53,4 +38,3 @@
       
   </body>
 </html>
-
