--- a/sheza/index.html
+++ b/sheza/index.html
@@ -21,7 +21,7 @@
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/photo/">Back to Family Tree</a>
+      <a class="navbar-brand" href="/photo/">Family Tree</a>
     </div>
   </nav>
 </header>
@@ -29,22 +29,49 @@
 <!-- Begin page content -->
 <main class="flex-shrink-0">
   <div class="container">
-    <h1 class="mt-5">Nusra</h1>
+    <h1 class="mt-5">Nihal</h1>
     <div class="row">
 	  <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
 	    <img
-	      src="1.jpg"
+	      src="1.jpeg"
 	      class="w-100 shadow-1-strong rounded mb-4"
 	      alt=""
 	    />
-
+<!-- 
 	    <img
-	      src="2.jpg"
+	      src="2.jpeg"
 	      class="w-100 shadow-1-strong rounded mb-4"
 	      alt=""
 	    />
 	  </div>
 
+	  <div class="col-lg-4 mb-4 mb-lg-0">
+	    <img
+	      src="3.jpeg"
+	      class="w-100 shadow-1-strong rounded mb-4"
+	      alt=""
+	    />
+
+	    <img
+	      src="4.jpeg"
+	      class="w-100 shadow-1-strong rounded mb-4"
+	      alt=""
+	    />
+	  </div>
+
+	  <div class="col-lg-4 mb-4 mb-lg-0">
+	    <img
+	      src="5.jpeg"
+	      class="w-100 shadow-1-strong rounded mb-4"
+	      alt=""
+	    />
+
+	    <img
+	      src="6.jpeg"
+	      class="w-100 shadow-1-strong rounded mb-4"
+	      alt=""
+	    /> -->
+	  </div>
 	</div>
   </div>
 </main>
@@ -53,4 +80,3 @@
       
   </body>
 </html>
-
