--- a/muhammed_ali/index.html
+++ b/muhammed_ali/index.html
@@ -30,7 +30,11 @@
 <main class="flex-shrink-0">
   <div class="container">
     <h1 class="mt-5">Muhammed Ali</h1>
-    
+    <div class="row">
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img src="1.jpeg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+      </div>
+    </div>
   </div>
 </main>
 
